--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,25 @@
-venv/
-__pycache__/
-
+**/venv/
+**/tests/
+*.pyc
+*__pycache__/
+*.pyo
+*.pyd
 *.db
+*.sqlite
+*.egg-info/
+*.egg
+*.log
+*.coverage
+*.mypy_cache/
+*.pytest_cache/
+*.hypothesis/
+*.tox/
+*.coverage.*
+*.cover
+*.hypothesis/
+*.pytest/
+videos/
+*.db
+*.mp4
+tests/
+*.mypy_cache/
